Hide postal/zip code from Stripe card input

--- a/index.html
+++ b/index.html
@@ -830,6 +830,7 @@ function mountCardElement() {
   if (!stripe || cardElement) return;
   stripeElements = stripe.elements();
   cardElement = stripeElements.create('card', {
+    hidePostalCode: true,
     style: {
       base: { color: '#E8E8E8', fontFamily: 'Inter, sans-serif', fontSize: '15px', fontWeight: '300',
         '::placeholder': { color: '#666' }, iconColor: '#C9A96E' },
