Fix navDate using timestamp math, staff dashboard working

--- a/staff.html
+++ b/staff.html
@@ -146,7 +146,7 @@ function dateStr(d) { return d.toISOString().split('T')[0]; }
 function isToday(d) { const t = new Date(); t.setHours(0,0,0,0); return d.getTime() === t.getTime(); }
 
 function navDate(dir) {
-  currentDate.setDate(currentDate.getDate() + dir);
+  currentDate = new Date(currentDate.getTime() + dir * 86400000);
   updateDateLabel();
   loadData();
 }
