Switch to Cloudflare Tunnel - no interstitial

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
 <script>
 const MIZU_GIST = 'https://gist.githubusercontent.com/abigailmini/4f8c9f567fa8a13d002fd5a2b703e8ed/raw/mizu-api-url.txt';
-const FALLBACK_API = 'https://9538cb73ceb40a2e-60-50-218-160.serveousercontent.com';
+const FALLBACK_API = 'https://dam-attachments-inline-horizontal.trycloudflare.com';
 let API_BASE = (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1' || window.location.hostname.endsWith('.serveousercontent.com')) ? `${window.location.origin}` : FALLBACK_API;
 
 let selectedDate = null, selectedPax = null, selectedSession = null, selectedCourse = null;
