--- a/staff.html
+++ b/staff.html
@@ -130,7 +130,7 @@
 
 <script>
 const MIZU_GIST = 'https://gist.githubusercontent.com/abigailmini/4f8c9f567fa8a13d002fd5a2b703e8ed/raw/mizu-api-url.txt';
-const FALLBACK_API = 'https://9538cb73ceb40a2e-60-50-218-160.serveousercontent.com';
+const FALLBACK_API = 'https://dam-attachments-inline-horizontal.trycloudflare.com';
 let API_BASE = (location.hostname === 'localhost' || location.hostname.endsWith('.serveousercontent.com')) ? location.origin : FALLBACK_API;
 
 const SESSIONS = [
