--- a/staff.html
+++ b/staff.html
@@ -131,7 +131,8 @@
 <script>
 const MIZU_GIST = 'https://gist.githubusercontent.com/abigailmini/4f8c9f567fa8a13d002fd5a2b703e8ed/raw/mizu-api-url.txt';
 const FALLBACK_API = 'https://dam-attachments-inline-horizontal.trycloudflare.com';
-let API_BASE = (location.hostname === 'localhost' || location.hostname.endsWith('.serveousercontent.com')) ? location.origin : FALLBACK_API;
+let API_BASE = (location.hostname === 'localhost' || location.hostname.endsWith('.trycloudflare.com')) ? location.origin : FALLBACK_API;
+// v2 cache bust
 
 const SESSIONS = [
   { name: 'Lunch', time: '12:00 PM — 2:00 PM', max: 20 },
