--- a/staff.html
+++ b/staff.html
@@ -176,7 +176,7 @@ async function loadData() {
     ]);
     const avail = await availRes.json();
     const data = await resRes.json();
-    render(avail, data.reservations || []);
+    render(avail, data.reservations || []); attachRowListeners();
     document.getElementById('lastUpdate').textContent = ` Updated ${new Date().toLocaleTimeString('en-MY', { hour: '2-digit', minute: '2-digit' })}`;
   } catch(e) {
     document.getElementById('content').innerHTML = `<div class="loading" style="color:#B85450">Failed to load. <a href="#" onclick="loadData();return false" style="color:var(--gold)">Retry</a></div>`;
