--- a/staff.html
+++ b/staff.html
@@ -101,6 +101,25 @@
   /* Empty state */
   .empty-session { padding: 24px 16px; text-align: center; color: var(--dim); font-size: 0.85rem; }
 
+  /* Edit Modal */
+  .modal-overlay { display:none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(0,0,0,0.7); z-index:100; align-items:center; justify-content:center; padding:16px; }
+  .modal-overlay.show { display:flex; }
+  .modal { background:var(--card); border:1px solid var(--border); border-radius:14px; width:100%; max-width:440px; max-height:90vh; overflow-y:auto; padding:20px; }
+  .modal h3 { color:var(--gold); font-size:1rem; font-weight:500; margin-bottom:16px; }
+  .modal label { display:block; font-size:0.72rem; color:var(--dim); text-transform:uppercase; letter-spacing:0.06em; margin-bottom:4px; margin-top:12px; }
+  .modal input, .modal textarea { width:100%; background:rgba(255,255,255,0.04); border:1px solid var(--border); border-radius:8px; padding:10px 12px; color:var(--text); font-family:inherit; font-size:0.85rem; outline:none; }
+  .modal input:focus, .modal textarea:focus { border-color:var(--gold-dim); }
+  .modal textarea { resize:vertical; min-height:60px; }
+  .modal-actions { display:flex; gap:8px; margin-top:20px; flex-wrap:wrap; }
+  .modal-actions button { flex:1; min-width:80px; padding:10px 12px; border-radius:8px; border:1px solid var(--border); background:none; color:var(--text); font-family:inherit; font-size:0.78rem; cursor:pointer; transition:all 150ms; font-weight:500; }
+  .modal-actions button:hover { border-color:var(--gold-dim); }
+  .modal-actions .btn-save { background:var(--gold); color:var(--bg); border-color:var(--gold); }
+  .modal-actions .btn-save:hover { opacity:0.9; }
+  .modal-actions .btn-cancel-booking { background:rgba(184,84,80,0.15); color:var(--red); border-color:rgba(184,84,80,0.3); }
+  .modal-actions .btn-postpone { background:rgba(201,169,110,0.1); color:var(--gold); border-color:rgba(201,169,110,0.2); }
+  .modal-actions .btn-charge { background:rgba(91,138,106,0.12); color:var(--green); border-color:rgba(91,138,106,0.2); }
+  .modal-status { font-size:0.78rem; color:var(--dim); text-align:center; margin-top:12px; min-height:20px; }
+
   /* Refresh */
   .refresh-bar { text-align: center; padding: 12px; font-size: 0.7rem; color: var(--dim); }
   .refresh-bar button { background: none; border: 1px solid var(--border); color: var(--dim); padding: 6px 14px; border-radius: 6px; cursor: pointer; font-size: 0.7rem; font-family: inherit; transition: all 150ms; }
@@ -133,6 +152,37 @@
   <div class="refresh-bar">
     <button onclick="loadData()">↻ Refresh</button>
     <span id="lastUpdate"></span>
+  </div>
+</div>
+
+<!-- Edit Modal -->
+<div class="modal-overlay" id="editModal">
+  <div class="modal">
+    <h3>✏️ Edit Reservation</h3>
+    <input type="hidden" id="editCreatedAt">
+    <label>Guest Names (comma-separated)</label>
+    <textarea id="editGuestNames" placeholder="John, Jane, Mike"></textarea>
+    <label>Notes</label>
+    <textarea id="editNotes" placeholder="Special requests, dietary needs..."></textarea>
+    <label>Allergy / Dietary</label>
+    <input type="text" id="editAllergy" placeholder="e.g. No shellfish, vegetarian">
+    <label>Phone</label>
+    <input type="text" id="editPhone">
+    <label>Email</label>
+    <input type="text" id="editEmail">
+    <div class="modal-actions">
+      <button class="btn-save" onclick="saveEdit()">💾 Save</button>
+      <button onclick="closeModal()">✕ Close</button>
+    </div>
+    <div style="border-top:1px solid var(--border);margin-top:16px;padding-top:12px">
+      <div style="font-size:0.72rem;color:var(--dim);margin-bottom:8px;text-transform:uppercase;letter-spacing:0.06em">Actions</div>
+      <div class="modal-actions">
+        <button class="btn-postpone" onclick="doAction('postpone')">📅 Postpone</button>
+        <button class="btn-cancel-booking" onclick="doAction('cancel')">❌ Cancel</button>
+        <button class="btn-charge" onclick="doAction('charge')">💳 Charge No-Show</button>
+      </div>
+    </div>
+    <div class="modal-status" id="editStatus"></div>
   </div>
 </div>
 
@@ -268,13 +318,15 @@ function render(avail, reservations) {
             </div>
             <div class="guest-inline-extra" style="margin-top:6px">
               <div class="guest-names-inline" style="font-size:0.72rem;color:var(--dim)">${guestNamesHTML ? guestNamesHTML.replace(/<br>/g, ', ') : ''}</div>
+              ${r.allergy ? `<div style="font-size:0.72rem;color:var(--red);margin-top:4px">⚠ ${r.allergy}</div>` : ''}
               <div class="guest-note-inline" style="font-size:0.72rem;color:var(--dim);margin-top:4px">${r.notes ? (r.notes.length>80 ? r.notes.substring(0,77)+'...' : r.notes) : ''}</div>
             </div>
           </div>
           <div class="guest-tags">
-            ${hasAllergy ? '<span class="tag allergy">⚠ ALLERGY</span>' : ''}
+            ${r.allergy ? '<span class="tag allergy">⚠ ALLERGY</span>' : (hasAllergy ? '<span class="tag allergy">⚠ ALLERGY</span>' : '')}
             ${hasNotes && !hasAllergy ? '<span class="tag notes">📝 NOTE</span>' : ''}
             ${hasPaid ? '<span class="tag paid">💳</span>' : ''}
+            <button class="tag" style="cursor:pointer;background:rgba(201,169,110,0.1);color:var(--gold);border:1px solid rgba(201,169,110,0.2)" onclick="event.stopPropagation();openEdit(${JSON.stringify(JSON.stringify(r))})">✏️</button>
           </div>
         </div>`;
 
@@ -353,6 +405,90 @@ document.getElementById('content').addEventListener('click', function(e){
 });
 
 })();
+
+// ── Edit Modal Functions ──
+function openEdit(rJson) {
+  const r = JSON.parse(rJson);
+  document.getElementById('editCreatedAt').value = r.createdAt || '';
+  document.getElementById('editGuestNames').value = r.guestNames || '';
+  document.getElementById('editNotes').value = r.notes || '';
+  document.getElementById('editAllergy').value = r.allergy || '';
+  document.getElementById('editPhone').value = r.phone || '';
+  document.getElementById('editEmail').value = r.email || '';
+  document.getElementById('editStatus').textContent = '';
+  document.getElementById('editModal').classList.add('show');
+}
+
+function closeModal() {
+  document.getElementById('editModal').classList.remove('show');
+}
+
+async function saveEdit() {
+  const status = document.getElementById('editStatus');
+  status.textContent = 'Saving...';
+  status.style.color = 'var(--gold)';
+  const payload = {
+    createdAt: document.getElementById('editCreatedAt').value,
+    guestNames: document.getElementById('editGuestNames').value,
+    notes: document.getElementById('editNotes').value,
+    allergy: document.getElementById('editAllergy').value,
+    phone: document.getElementById('editPhone').value,
+    email: document.getElementById('editEmail').value
+  };
+  try {
+    const r = await fetch(`${API_BASE}/staff/update`, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json', 'Bypass-Tunnel-Reminder': 'true' },
+      body: JSON.stringify(payload)
+    });
+    const data = await r.json();
+    if (data.success) {
+      status.textContent = '✅ Saved!';
+      status.style.color = 'var(--green)';
+      setTimeout(() => { closeModal(); loadData(); }, 800);
+    } else {
+      status.textContent = '❌ ' + (data.error || 'Failed');
+      status.style.color = 'var(--red)';
+    }
+  } catch(e) {
+    status.textContent = '❌ Network error';
+    status.style.color = 'var(--red)';
+  }
+}
+
+async function doAction(act) {
+  const createdAt = document.getElementById('editCreatedAt').value;
+  if (!createdAt) return;
+  const labels = { cancel: 'Cancel this booking?', postpone: 'Postpone this booking?', charge: 'Charge no-show fee?' };
+  if (!confirm(labels[act] || `Perform ${act}?`)) return;
+  const status = document.getElementById('editStatus');
+  status.textContent = 'Processing...';
+  status.style.color = 'var(--gold)';
+  try {
+    const r = await fetch(`${API_BASE}/staff/action`, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json', 'Bypass-Tunnel-Reminder': 'true' },
+      body: JSON.stringify({ createdAt, action: act })
+    });
+    const data = await r.json();
+    if (data.success) {
+      status.textContent = `✅ ${act.charAt(0).toUpperCase() + act.slice(1)} done!`;
+      status.style.color = 'var(--green)';
+      setTimeout(() => { closeModal(); loadData(); }, 800);
+    } else {
+      status.textContent = '❌ ' + (data.error || 'Failed');
+      status.style.color = 'var(--red)';
+    }
+  } catch(e) {
+    status.textContent = '❌ Network error';
+    status.style.color = 'var(--red)';
+  }
+}
+
+// Close modal on overlay click
+document.getElementById('editModal').addEventListener('click', function(e) {
+  if (e.target === this) closeModal();
+});
 </script>
 </body>
 </html>
